changed SoftAssertion, added bonigarcia webdrivermanager