@@ -1,9 +1,8 @@
 package com.epam.tc.hw2.ex1;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import io.github.bonigarcia.wdm.WebDriverManager;
 import java.util.List;
-import org.openqa.selenium.By;
+import java.util.concurrent.TimeUnit;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 
@@ -15,40 +14,27 @@ public class Utils {
     public static final String USERNAME = "ROMAN IOVLEV";
     public static final String LOGIN = "Roman";
     public static final String PASSWORD = "Jdi1234";
-    public static final int MENU_BUTTONS_NUMBER = 4;
-    public static final List<String> menuButtons = new ArrayList<>(
-        Arrays.asList("HOME", "CONTACT FORM", "SERVICE", "METALS & COLORS"));
+    public static final List<String> menuButtons =
+        List.of("HOME", "CONTACT FORM", "SERVICE", "METALS & COLORS");
     public static final int IMAGES_NUMBER = 4;
-    public static final List<By> imagesXpathSelectors = new ArrayList<>(
-        Arrays.asList(
-            By.xpath("//span[contains(@class, 'icon-practise')]/../following-sibling::*[@class='benefit-txt']"),
-            By.xpath("//span[contains(@class, 'icon-custom')]/../following-sibling::*[@class='benefit-txt']"),
-            By.xpath("//span[contains(@class, 'icon-multi')]/../following-sibling::*[@class='benefit-txt']"),
-            By.xpath("//span[contains(@class, 'icon-base')]/../following-sibling::*[@class='benefit-txt']"))
-    );
-    public static final int TEXTS_NUMBER = 4;
-    public static final List<String> imagesDescriptions = new ArrayList<>(
-        Arrays.asList(
-            "To include good practices\nand ideas from successful\nEPAM project",
-            "To be flexible and\ncustomizable",
-            "To be multiplatform",
-            "Already have good base\n(about 20 internal and\nsome external projects),\nwish to get more…")
-    );
-    public static final int LEFT_SECTION_ITEMS_NUM = 5;
-    public static final List<String> leftSectionItemsTexts = new ArrayList<>(
-        Arrays.asList(
-            "Home",
-            "Contact form",
-            "Service",
-            "Metals & Colors",
-            "Elements packs"
-        )
+    public static final List<String> imagesTexts = List.of(
+        "To include good practices\nand ideas from successful\nEPAM project",
+        "To be flexible and\ncustomizable",
+        "To be multiplatform",
+        "Already have good base\n(about 20 internal and\nsome external projects),\nwish to get more…");
+    public static final List<String> leftSectionItemsTexts = List.of(
+        "Home",
+        "Contact form",
+        "Service",
+        "Metals & Colors",
+        "Elements packs"
     );
     public static final int FRAME_NUMBER = 4;
 
     public static WebDriver getChromeDriver() {
-        System.setProperty(CHROME_SYSTEM_PROPERTY_NAME, CHROME_SYSTEM_PROPERTY_PATH);
+        WebDriverManager.chromedriver().setup();
         WebDriver driver = new ChromeDriver();
+        driver.manage().timeouts().pageLoadTimeout(30, TimeUnit.SECONDS);
         driver.manage().window().maximize();
 
         return driver;
